@@ -267,6 +267,7 @@ matrix(c("!", "hexmode",
          "!", "octmode",
          "$", "DLLInfo",
          "$", "package_version",
+         "$<-", "POSIXlt",
          "$<-", "data.frame",
          "&", "hexmode",
          "&", "octmode",
